tests/ifcc-test-output/testfiles-functions-scope_error_recursive copy/gcc-compile.txt
input.c: In function ‘func’:
input.c:2:12: error: ‘a’ undeclared (first use in this function)
    2 |     return a + 1;
      |            ^
input.c:2:12: note: each undeclared identifier is reported only once for each function it appears in
input.c: In function ‘main’:
input.c:7:9: warning: unused variable ‘a’ [-Wunused-variable]
    7 |     int a = 5;
      |         ^
input.c: In function ‘func’:
input.c:3:1: warning: control reaches end of non-void function [-Wreturn-type]
    3 | }
      | ^

return code: 1
